style.css
body {
    font-family: 'Inter';
    background-color: #FFF0CE;
    margin:0;
}

.main-header {
    display:flex;
    align-items: center;
    width:100%;
    height:150px;
    background-color: #0174BE;
    position:sticky;
    top:0px;
}

nav {
    width:100%;
}

.main-nav {
    display:grid;
    align-items: center;
    grid-template-columns:max-content auto;
    padding-left:60px;
    padding-right:60px;
}

.logo {
    display:inline;
}

.nav-links {
    display:flex;
    align-items: center;
    padding-left:120px;
    padding-right:60px;
}

.nav-links > ul, .food-nav > ul {
    display:flex;
    width:100%;
    justify-content:space-between;
    align-items:center;
    padding:0;
    margin:0;

    list-style-type:none;
    text-decoration:none;
}

li {
    display:inline;
    font-size:40px;
}

.selected {
    color:white;
}

.food-nav {
    display:flex;
    align-items:center;
    justify-content:stretch;
    height:120px;
    background-color: #FFC436;
}

.menu-button {
    display:none;
    font-size:30px;
    text-align:right;
}

.food-menu {
    width:100%;
    padding-left:32px;
    padding-right:32px;
}

.food-menu > ul{
    display:grid;
    align-items:center;
    width:100%;
    grid-template-columns:1fr 1fr 1fr 1fr;
    gap:30px;
    padding:0;
    text-align:center;
    font-weight:bold;
}

.hotdog-menu {
    display:grid;
    grid-template-columns:1fr 1fr 1fr;
    width:100%;
    gap:40px;
    margin-left:auto;
    margin-right:auto;
    margin-top:70px;
    margin-bottom:70px;
}

.hotdog-menu-item {
    width:100%;
    height:297px;
    border-radius:15px;
    background-color: #0174BE;
}

.main-content-wrapper {
    display:block;
    width:100%;
    height:auto;
}

.menu-wrapper {
    display:flex;
    justify-content: center;
    padding:0 30px;
}

.hotdog-menu-item > img {
    width:100%;
    height:227px;
    object-fit: cover;
    margin:0;
    padding:0;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    display:block;
}

.menu-caption > h3 {
    width:100%;
    margin:0;
    font-size:25px;
    font-weight:bold;
    color:white;
    text-align:center;
    padding:0 5px;
}

.menu-caption {
    width:100%;
    height:70px;
    margin:0;
    display:flex;
    align-items:center;
    justify-content: center;
}

@media (max-width:1364px) {
    .hotdog-menu {
        justify-content:center;
    }
}

@media (max-width:1400px) {
    .nav-links > ul > li {
        font-size:34px;
    }

    .food-menu > ul > li {
        font-size:34px;
    }
}

@media (max-width:1200px) {
    .nav-links > ul > li {
        font-size:30px;
    }
    .food-menu > ul > li {
        font-size:25px;
    }

    .main-header {
        height:90px;
    }

    .food-nav {
        height:60px;
    }

    .logo {
        width:147px;
    }

    .main-nav {
        padding-left:30px;
        padding-right:30px;
    }

    .nav-links {
        padding-right:0;
    }

    .hotdog-menu {
        grid-template-columns:1fr 1fr;
    }
    
}

@media (max-width:940px) {
    .nav-links > ul > li > a {
        font-size:26px;
    }
}

@media (max-width:768px) {
    .menu-wrapper {
        float:right;
        max-width: calc(100vw - 160px);
        width:100%;
    }

    .nav-links {
        display:none;
    }
    .main-body {
        display:flex;
        width:100%;
        height:auto;
        height:100%;
    }
    .food-nav {
        position:fixed;
        top:80px;
        height:100vh;
        min-width:160px;
        max-width:160px;
        align-items:start;
    }

    .food-menu > ul {
        display:flex;
        flex-direction:column;
    }

    .food-menu {
        padding:0;
        margin-top:20px;
        gap:40px;
        height:auto;
    }

    .hotdog-menu-item {
        width:100%;
        height:auto;
        height:297px;
    }

    .menu-caption > h3 {
        font-size:18px;
    }

    .hotdog-menu-item, .hotdog-menu-item > img {
        border-radius:0;
    }

    .hotdog-menu {
        margin:0;
    }

    .main-header {
        height:80px;
    }
    .main-content-wrapper {
        width:100%;
    }

    .menu-button {
        display:block;
    }

    .hotdog-menu {
        grid-template-columns:100%;
    }

    .menu-wrapper {
        padding:0;
    }
    .main-nav {
        padding:0 15px;
    }
}

/*About page*/

.about-content-wrapper{

    display: grid;
    max-width: 1920px;
    grid-template-columns: 1.15fr 0.85fr;
    text-align: center;
    justify-content: center;
    

}

.aboutpicture2, .about-tablet {

    display: none;

}


.aboutpicture1 {

    width: 85%;
    height: 730px;
    border-radius: 30px;
    margin-top: 40px;
    margin-right: 45px;
    grid-column-start: 1;
    grid-column-end: 2;

}

.caption {

    color: black;
    font-size: 25px;

}

.about-caption {

    grid-column-start: 2;
    grid-column-end: 3;
    padding-left: 5%;
    background-color: #FFC436;
    padding-top: 60px;
    text-align: left;

}

@media (max-width:1440px) {

   

}


/* Skibar styles*/
@media (max-width:1400px) {

    .content-wrapper{
        display: flex;
        flex-direction: column;
        align-items: center;
    }


}

@media (max-width:400px) {

  .side-content{
    display: none;

  }
}
/* Skibar styles*/
.nav-links ul li a {
    color: black; 
    text-decoration: none; 
}

.azerite{
    width: 100%;
    height:100%;
    background-color: #0174be;
    border-radius: 10px;
    overflow: hidden;
}

.azerite img{
    width: 55%;
    height: auto;
}

.card-content {
    display: flex; 
    align-items: center; 
    background-color: #0c356a ;

}

p{
    color: white;
    font-size: 1.35rem;
}

.main-content{
    height: 100%;
}

.content-wrapper{
    display: flex;
    margin: 0 auto;
    margin-top: 100px;
    gap:20px;
    overflow: hidden;
    width: 95%;
}

.card-heading{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80px;
}

.card-heading h1 {
    font-size: 40px; 
}

.side-content{ 
    display: flex;
    justify-content: center;
    background-color: #FFC436;
   
}

main{ 
    display: grid;
    justify-content: space-between;
    grid-template-columns: 3fr 1fr;
    gap: 10px;
    height: calc(100vh - 150px);
}

.form-heading{
    text-align: center;
}

.form{
    display: flex;
    flex-direction: column;
    width: 70%;
    height: 200px;
    margin: 50px auto;
    background-color: #fff0ce;
    padding: 20px;
    border-radius: 10px;
}

input[type="email"],
input[type="password"] {
    width: 96%;
    padding: 5px;
    background-color: #FFC436;
    border: 1px solid #ffffff;
    border-radius: 15px;
    margin-bottom: 15px;
}

button {
    background-color: #FFC436;
    padding: 10px 40px;
    border: none;
    border-radius: 5px;
    float: right;
}

.form-grid{
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr;
}

